--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Build Solution
         run: echo Build Done
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     environment: production
     steps:
